--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -16,6 +16,23 @@
     <?php
         $CURRENT_USER_FINAL=$_SESSION['user'];
         if (isset($_SESSION['look']) && $_SESSION['look']!='') $CURRENT_USER_FINAL=$_SESSION['look'];
+        
+        $right_sidebar_right=0;
+        $content_margin_right=240;
+        $content_margin_right=240;
+        $to_top_right=285;
+        $to_shortcuts_right=330;
+        if (isset($_COOKIE['iolog']) && $_COOKIE['iolog']=='0') {
+            $right_sidebar_right=-200;
+            $content_margin_right=40;
+            $to_top_right=85;
+            $to_shortcuts_right=130;
+        }
+        
+        $GLOBALS['CURRENT_USER_FINAL']=$CURRENT_USER_FINAL;
+        $GLOBALS['right_sidebar_right']=$right_sidebar_right;
+        $GLOBALS['to_top_right']=$to_top_right;
+        $GLOBALS['to_shortcuts_right']=$to_shortcuts_right;
     ?>
     var GLOBAL = {};
     GLOBAL.FTP_USER_PREFIX  = 'admin_';
@@ -23,8 +40,11 @@
     GLOBAL.DB_DBNAME_PREFIX = 'admin_';
     GLOBAL.CURRENT_USER = '<?=$_SESSION['user']?>';
     GLOBAL.CURRENT_USER_LOOK = '<?=$_SESSION['look']?>';
-    GLOBAL.CURRENT_USER_FINAL = '<?=$CURRENT_USER_FINAL?>';
+    GLOBAL.CURRENT_USER_FINAL = '<?=$GLOBALS['CURRENT_USER_FINAL']?>';
     GLOBAL.AJAX_URL = '';
   </script>
+  <style>
+    .l-content .l-center {margin-right: <?=$content_margin_right?>px}
+  </style>
 </head>
 <body class="body-<?=strtolower($TAB)?> lang-<?=$_SESSION['language']?>">
