--- a/web/templates/right.html
+++ b/web/templates/right.html
@@ -1,20 +1,15 @@
-<?php
-    $CURRENT_USER_FINAL=$_SESSION['user'];
-    if (isset($_SESSION['look']) && $_SESSION['look']!='') $CURRENT_USER_FINAL=$_SESSION['look'];
-?>
-
-<div class="right_sidebar" style="width: 240px; position: fixed; display: block; z-index: 98; top: 50px; right: 0px; box-sizing: border-box; height: 100%; background: #fff; border-left: 1px solid #dee5e8;">
+<div class="right_sidebar" style="width: 240px; position: fixed; display: block; z-index: 98; top: 50px; right: <?=$GLOBALS['right_sidebar_right']?>px; box-sizing: border-box; height: 100%; background: #fff; border-left: 1px solid #dee5e8;">
 <div class="io-log">
   <h2 class="io-log-h2" id="iologbutton">
     <?php
-    if ($CURRENT_USER_FINAL=='admin') echo __('Server');
+    if ($GLOBALS['CURRENT_USER_FINAL']=='admin') echo __('Server');
     else echo __('Account');
     ?>
   </h2>
     <div>
 
 <?php
-    if ($CURRENT_USER_FINAL=='admin') {
+    if ($GLOBALS['CURRENT_USER_FINAL']=='admin') {
         $sysload=sys_getloadavg();
         $sysload[0]=number_format((float)$sysload[0], 2, '.', '');
         $sysload[1]=number_format((float)$sysload[1], 2, '.', '');
@@ -67,11 +62,11 @@
           <div>
             <?php
                 $output='';
-                exec (VESTA_CMD . "v-list-user ".$CURRENT_USER_FINAL." json", $output, $return_var);
+                exec (VESTA_CMD . "v-list-user ".$GLOBALS['CURRENT_USER_FINAL']." json", $output, $return_var);
                 $data = json_decode(implode('', $output), true);
                 $data = array_reverse($data,true);
                 //print_r($data); exit;
-                $key=$CURRENT_USER_FINAL;
+                $key=$GLOBALS['CURRENT_USER_FINAL'];
                 if ($data[$key]['DISK_QUOTA']=='unlimited') echo __('unlimited');
                 else echo get_percentage($data[$key]['U_DISK'],$data[$key]['DISK_QUOTA']).' %';
             ?>
@@ -80,7 +75,7 @@
       </div>
 <?php
     }
-    if ($CURRENT_USER_FINAL=='admin') {
+    if ($GLOBALS['CURRENT_USER_FINAL']=='admin') {
         $output='';
         exec ("df -h | grep '^/dev'", $output, $return_var);
         foreach($output as $line) {
@@ -128,7 +123,7 @@
     <div>
 <?php
 $output='';
-exec (VESTA_CMD."v-list-user-log ".$CURRENT_USER_FINAL." json 25", $output, $return_var);
+exec (VESTA_CMD."v-list-user-log ".$GLOBALS['CURRENT_USER_FINAL']." json 25", $output, $return_var);
 check_error($return_var);
 $data = json_decode(implode('', $output), true);
 foreach ($data as $key => $value) {
