--- a/web/templates/scripts.html
+++ b/web/templates/scripts.html
@@ -8,7 +8,7 @@
   <script type="text/javascript" src="/js/i18n.js.php?<?=JS_LATEST_UPDATE?>"></script>
   <script type="text/javascript" src="/js/templates.js?<?=JS_LATEST_UPDATE?>"></script>
   <script type="text/javascript" src="/js/jquery.finder.js?<?=JS_LATEST_UPDATE?>"></script>
-  <script type="text/javascript" src="/js/fix.js?v=4"></script>
+  <script type="text/javascript" src="/js/fix.js?v=<?=JS_LATEST_UPDATE?>"></script>
 
   <script>
     hover_menu = function() {}
