--- a/web/templates/user/panel.html
+++ b/web/templates/user/panel.html
@@ -1,8 +1,8 @@
   <div class="hidden" id="token" token="<?=$_SESSION['token']?>"></div>
-  <a href="#" class="to-top">
+  <a href="#" class="to-top" style="right: <?=$GLOBALS['to_top_right']?>px;">
     <i class="l-icon-to-top"></i>
   </a>
-  <a href="#" class="to-shortcuts">
+  <a href="#" class="to-shortcuts" style="right: <?=$GLOBALS['to_shortcuts_right']?>px;">
     <i class="l-icon-shortcuts"></i>
   </a>
   <div class="l-header">
