Fix for Grammarly Addon conflict

--- a/web/templates/admin/add_mail_acc.html
+++ b/web/templates/admin/add_mail_acc.html
@@ -97,7 +97,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <textarea size="20" class="vst-textinput" name="v_aliases"><?=htmlentities(trim($v_aliases, "'"))?></textarea>
+                                        <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" size="20" class="vst-textinput" name="v_aliases"><?=htmlentities(trim($v_aliases, "'"))?></textarea>
                                     </td>
                                 </tr>
                                 <tr>
@@ -107,7 +107,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <textarea size="20" class="vst-textinput" name="v_fwd"><?=htmlentities(trim($v_fwd, "'"))?></textarea>
+                                        <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" size="20" class="vst-textinput" name="v_fwd"><?=htmlentities(trim($v_fwd, "'"))?></textarea>
                                     </td>
                                 </tr>
                                 <tr>
