--- a/web/templates/admin/edit_backup_exclusions.html
+++ b/web/templates/admin/edit_backup_exclusions.html
@@ -50,7 +50,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea class="vst-textinput" name="v_web" placeholder="<?php echo __('WEB_EXCLUSIONS') ?>"><?=htmlentities(trim($v_web, "'"))?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" class="vst-textinput" name="v_web" placeholder="<?php echo __('WEB_EXCLUSIONS') ?>"><?=htmlentities(trim($v_web, "'"))?></textarea>
                                 </td>
                             </tr>
                             <tr>
@@ -60,7 +60,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea class="vst-textinput" name="v_mail" placeholder="<?php echo __('MAIL_EXCLUSIONS') ?>"><?=htmlentities(trim($v_mail, "'"))?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" class="vst-textinput" name="v_mail" placeholder="<?php echo __('MAIL_EXCLUSIONS') ?>"><?=htmlentities(trim($v_mail, "'"))?></textarea>
                                 </td>
                             </tr>
                             <tr>
@@ -70,7 +70,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea class="vst-textinput" name="v_db" placeholder="<?php echo __('DB_EXCLUSIONS') ?>"><?=htmlentities(trim($v_db, "'"))?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" class="vst-textinput" name="v_db" placeholder="<?php echo __('DB_EXCLUSIONS') ?>"><?=htmlentities(trim($v_db, "'"))?></textarea>
                                 </td>
                             </tr>
                             <tr>
@@ -80,7 +80,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea size="20" class="vst-textinput" name="v_userdir" placeholder="<?php echo __('USER_EXCLUSIONS') ?>"><?=htmlentities(trim($v_userdir, "'"))?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" size="20" class="vst-textinput" name="v_userdir" placeholder="<?php echo __('USER_EXCLUSIONS') ?>"><?=htmlentities(trim($v_userdir, "'"))?></textarea>
                                 </td>
                             </tr>
                         </table>
