--- a/web/templates/admin/edit_server.html
+++ b/web/templates/admin/edit_server.html
@@ -739,7 +739,7 @@
                                         </tr>
                                         <tr>
                                             <td>
-                                                <textarea size="20" class="vst-textinput" name="v_sys_ssl_crt"><?=htmlentities(trim($v_sys_ssl_crt, "'"))?></textarea>
+                                                <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" size="20" class="vst-textinput" name="v_sys_ssl_crt"><?=htmlentities(trim($v_sys_ssl_crt, "'"))?></textarea>
                                             </td>
                                         </tr>
                                         <tr>
@@ -749,7 +749,7 @@
                                         </tr>
                                         <tr>
                                             <td>
-                                                <textarea size="20" class="vst-textinput" name="v_sys_ssl_key"><?=htmlentities(trim($v_sys_ssl_key, "'"))?></textarea>
+                                                <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" size="20" class="vst-textinput" name="v_sys_ssl_key"><?=htmlentities(trim($v_sys_ssl_key, "'"))?></textarea>
                                             </td>
                                         </tr>
                                         <tr>
