--- a/web/templates/admin/edit_server_bind9.html
+++ b/web/templates/admin/edit_server_bind9.html
@@ -57,7 +57,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea class="vst-textinput console" name="v_options"><?=$v_options?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" class="vst-textinput console" name="v_options"><?=$v_options?></textarea>
                                 </td>
                             </tr>
                             <tr>
@@ -67,7 +67,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea class="vst-textinput console" name="v_config"><?=$v_config?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" class="vst-textinput console" name="v_config"><?=$v_config?></textarea>
                                 </td>
                             </tr>
                             <td class="vst-text input-label" style="text-transform: capitalize;">
