--- a/web/templates/admin/edit_server_dovecot.html
+++ b/web/templates/admin/edit_server_dovecot.html
@@ -56,7 +56,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea class="vst-textinput console" name="v_config"><?=$v_config?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" class="vst-textinput console" name="v_config"><?=$v_config?></textarea>
                                 </td>
                             </tr>
                             <?php if (!empty($v_config_path1)) {
@@ -69,7 +69,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea class="vst-textinput console" name="v_config1"><?=$v_config1?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" class="vst-textinput console" name="v_config1"><?=$v_config1?></textarea>
                                 </td>
                             </tr>
                             <tr>
@@ -79,7 +79,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea class="vst-textinput console" name="v_config2"><?=$v_config2?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" class="vst-textinput console" name="v_config2"><?=$v_config2?></textarea>
                                 </td>
                             </tr>
                             <tr>
@@ -89,7 +89,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea class="vst-textinput console" name="v_config3"><?=$v_config3?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" class="vst-textinput console" name="v_config3"><?=$v_config3?></textarea>
                                 </td>
                             </tr>
                             <tr>
@@ -99,7 +99,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea class="vst-textinput console" name="v_config4"><?=$v_config4?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" class="vst-textinput console" name="v_config4"><?=$v_config4?></textarea>
                                 </td>
                             </tr>
                             <tr>
@@ -109,7 +109,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea class="vst-textinput console" name="v_config5"><?=$v_config5?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" class="vst-textinput console" name="v_config5"><?=$v_config5?></textarea>
                                 </td>
                             </tr>
                             <tr>
@@ -119,7 +119,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea class="vst-textinput console" name="v_config6"><?=$v_config6?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" class="vst-textinput console" name="v_config6"><?=$v_config6?></textarea>
                                 </td>
                             </tr>
 
@@ -130,7 +130,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea class="vst-textinput console" name="v_config7"><?=$v_config7?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" class="vst-textinput console" name="v_config7"><?=$v_config7?></textarea>
                                 </td>
                             </tr>
 
@@ -141,7 +141,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea class="vst-textinput console" name="v_config8"><?=$v_config8?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" class="vst-textinput console" name="v_config8"><?=$v_config8?></textarea>
                                 </td>
                             </tr>
 
