--- a/web/templates/admin/edit_server_nginx.html
+++ b/web/templates/admin/edit_server_nginx.html
@@ -184,7 +184,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea class="vst-textinput console" name="v_config"><?=$v_config?></textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" class="vst-textinput console" name="v_config"><?=$v_config?></textarea>
                                 </td>
                             </tr>
                             <tr>
