--- a/web/templates/admin/list_ssl.html
+++ b/web/templates/admin/list_ssl.html
@@ -48,7 +48,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea size="20" class="vst-textinput" name="v_csr"><?php print $v_csr ?> </textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" size="20" class="vst-textinput" name="v_csr"><?php print $v_csr ?> </textarea>
                                 </td>
                             </tr>
                             <tr>
@@ -57,7 +57,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea size="20" class="vst-textinput" name="v_crt"><?php print $v_crt ?> </textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" size="20" class="vst-textinput" name="v_crt"><?php print $v_crt ?> </textarea>
                                 </td>
                             </tr>
                             <tr>
@@ -67,7 +67,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <textarea size="20" class="vst-textinput" name="v_key"><?php print $v_key ?> </textarea>
+                                    <textarea data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" size="20" class="vst-textinput" name="v_key"><?php print $v_key ?> </textarea>
                                 </td>
                             </tr>
                         </table>
