Update list_user.html - coffee typo

--- a/web/templates/admin/list_user.html
+++ b/web/templates/admin/list_user.html
@@ -81,7 +81,7 @@
               </div>
               <div class="io-box-left-items io-4-homepage-block">
                 <a href="https://forum.myvestacp.com/viewtopic.php?t=814" target="_blank">Donate</a>
-                <span class="io-description">Buy us a coffe</span>
+                <span class="io-description">Buy us a coffee</span>
               </div>
               <div class="io-box-left-items io-5-homepage-block">
                 <a href="https://wiki.myvestacp.com/" target="_blank">Wiki</a>
