--- a/web/templates/admin/edit_server.html
+++ b/web/templates/admin/edit_server.html
@@ -643,6 +643,17 @@
                                                     </tr>
                                                     <tr>
                                                         <td class="vst-text">
+                                                            <?php print __('Port') ?>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>
+                                                            <input type="text" size="20" class="vst-input" name="v_backup_port" value="<?=trim($v_backup_port, "'")?>">
+                                                            <br><br>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="vst-text">
                                                             <?php print __('Username') ?>
                                                         </td>
                                                     </tr>
